@@ -1,5 +1,9 @@
 # $Id$
 
+2008-03-19	Ivan Y. Khvostishkov
+
+	* core/Form/PlainForm.class.php: getFormId() helper for obtaining ids.
+
 2008-03-24	Konstantin V. Arkhipov
 
 	* meta/, main/Base/LightMetaProperty.class.php: integer's limits
